fix gap in pricing section

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -3,7 +3,7 @@ footer{
   font-weight: var(--fw-md);
 
   .container{
-    padding-inline: 3rem;
+    padding-inline: 1.5rem;
   }
 
   .container,
