--- a/styles/pricing.css
+++ b/styles/pricing.css
@@ -7,6 +7,7 @@
 
   .cards{
     margin-top: 2rem;
+    gap: 2rem;
   }
 
   h3{
